# computer-system-architecture

./: CMakeLists.txt  EXPLANOTARY_NOTE.docs.docx  Parallelepiped.cpp  Parallelepiped.h  README.md  Rand.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h  a.out  main.cpp
entity/: Container.cpp  Container.h  Parallelepiped.cpp  Parallelepiped.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h
figures_hw1/: Container.cpp  Container.h  Parallelepiped.cpp  Shape.cpp  Shape.h  Tetrahedron.h  data.txt  main.cpp  result_1.txt  result_4.txt
figures_hw1/tests/: test_1_10000.txt  test_2_10000.txt  test_5_5000.txt
figures_hw1/tests_results/: result_1_2.txt  result_2.txt  result_2_2.txt  result_4_2.txt
figures_hw2/: EXPLANOTARY_NOTE.docs.docx  a.out  main.cpp
figures_hw2/entity/: Parallelepiped.cpp  Shape.cpp  Shape.h  Sphere.cpp  Tetrahedron.h
figures_hw2/function/: Rand.cpp
figures_hw2/tests/: test_1_20.txt  test_3_1000.txt  test_4_10000.txt  test_5_20000.txt
figures_hw2/tests_results/: test_1_sort.txt  test_2_result.txt  test_2_sort.txt  test_3_sort.txt  test_4_result.txt  test_4_sort.txt  test_5_result.txt  test_5_sort.txt
figures_hw3/: EXPLANOTARY_NOTE.docx  README.md  main.py
figures_hw3/entity/: container.py  shape.py
figures_hw3/tests_results/: test_3_result.txt
figures_hw4/: EXPLANOTARY_NOTE.docx  README.md  input.asm  inrnd.asm  macros.mac  main.asm  makefile  output.asm  square.asm
figures_hw4/tests/: test_2_100.txt
tests/: test6bad.txt  test_1_20.txt  test_2_20.txt  test_3_20000.txt  test_4_5000.txt
tests_results/: result_3.txt  result_3_2.txt  result_4.txt  test_1_result.txt
threads_hw5/: CMakeLists.txt  EXPLANOTARY_NOTE.docx  README.md  a.out  data.txt  main.cpp  text.txt
threads_hw5/tests/: test_1_5.txt  test_2_10.txt  test_3_15.txt  test_4_20.txt  test_5_30.txt
